fix overlapping slide nav btn

--- a/src/components/Showcases/ShowcaseItem/index.scss
+++ b/src/components/Showcases/ShowcaseItem/index.scss
@@ -12,7 +12,7 @@
 .showcase-top {
   &__nav {
     margin-top: 60px;
-    margin-bottom: -30px;
+    margin-bottom: 0px;
     display: flex;
     justify-content: center;
     &__item {
@@ -122,7 +122,7 @@
   display: flex;
   min-height: 80vh;
   width: 100vw;
-  margin: auto 0 auto;
+  margin: 20px 0 auto;
   justify-content: flex-start;
   &__slide-btn-section {
     display: flex;
